sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: reassignment to val
      i = i - 1
        ^